@@ -1,5 +1,11 @@
 2006-10-13  Damon Chaplin  <damon@gnome.org>
 
+	* gtkdoc-mkdb.in (OutputSymbolTraits): new function to output the
+	"Since" and "Stability Level:" paragraphs, with roles to allow
+	XSLT styling. (#348046)
+
+2006-10-13  Damon Chaplin  <damon@gnome.org>
+
 	* gtkdoc-scangobj.in: support interfaces on non-GObject types.
 	(#348058, Josh Parsons).
 
